<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.themichalkozak.music.NowPlaying"
    android:background="@drawable/mainwalppaper">


    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/image_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/albumicon"
        android:contentDescription="@string/album_drawable"/>

    <TextView
        android:text="@string/label_default_artist"
        android:layout_marginTop="30dp"
        android:id="@+id/artist_name_now_playing"
        android:layout_centerInParent="true"
        android:layout_below="@id/image_now_playing"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/label_defaulttrack"
        android:layout_marginTop="5dp"
        android:id="@+id/track_name-now_playing"
        android:textColor="#fff"
        android:layout_centerInParent="true"
        android:layout_below="@id/artist_name_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/track_name-now_playing"
        android:id="@+id/seek_bar_now_playing"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/pause_play_track"
        android:layout_below="@+id/seek_bar_now_playing"
        android:id="@+id/previous_track"
        android:background="@drawable/previous"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/previous_button"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/pause_play_track"
        android:layout_below="@+id/seek_bar_now_playing"
        android:id="@+id/next_track"
        android:background="@drawable/next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/next_button"/>

    <Button
        android:background="@drawable/play"
        android:id="@+id/pause_play_track"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/next_track"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
